# octo_mcp

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  server.py  smithery.yaml
octo_run/: server.py
