[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "octo-mcp-server"
version = "0.1.0"
description = "A server for octo-mcp"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.13.0",
    "smithery>=0.1.23",
]

[project.scripts]
# Run the MCP server in development mode
dev = "smithery.cli.dev:main"
# Run server with interactive testing playground
playground = "smithery.cli.playground:main"

[tool.smithery]
server = "octo_mcp.server:create_server"